ext/pdo_mysql/php_pdo_mysql_int.h
@@ -104,6 +104,7 @@ typedef struct {
 	unsigned buffered:1;
 	unsigned emulate_prepare:1;
 	unsigned fetch_table_names:1;
+	unsigned local_infile:1;
 #ifndef PDO_USE_MYSQLND
 	zend_ulong max_buffer_size;
 #endif
